<resources>
    <string name="app_name">GitHubMobile</string>
    <string name="nav_repositories_title">Repositories</string>
    <string name="button_sign_in">sign in</string>
    <string name="button_retry">retry</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_error_description">Check your internet connection</string>
    <string name="license">License</string>
    <string name="apache_2_0">Apache-2.0</string>
    <string name="stars">stars</string>
    <string name="forks">forks</string>
    <string name="watchers">watchers</string>
    <string name="personal_access_token">Personal access token</string>
    <string name="error_title">Error</string>
    <string name="ok_button">OK</string>
    <string name="empty">Empty</string>
    <string name="no_repositories_at_the_moment">No repositories at the moment</string>
</resources>